chore(ws): inject forwarded WSS URL for Codespaces

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -11,6 +11,7 @@
                  img-src 'self' https://i.ytimg.com data:;
                  frame-src https://www.youtube.com https://www.youtube-nocookie.com;">
   <link rel="stylesheet" href="style.css" />
+  <script>globalThis.RTW_WS_URL = 'wss://redesigned-cod-g95ww76g4g5fvqxj-6789.app.github.dev';</script>
 </head>
 <body>
   <div id="hud">
