Add tag-based hallucination pacing controls

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -31,9 +31,13 @@
         </div>
 
         <div class="tags-panel">
-          <span class="hud-label">Tags</span>
-          <div id="tag-buttons" class="tag-buttons" role="group" aria-label="Select tags"></div>
-          <p id="hud-tag" class="tag-status">None</p>
+          <span id="hud-tag-label" class="hud-label">Tag: Default</span>
+          <div
+            id="hud-tags"
+            class="tag-buttons"
+            role="group"
+            aria-label="Select a hallucination tag"
+          ></div>
         </div>
       </section>
     </main>
