Add dynamic HUD controls and overlay logging

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -7,17 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div id="hud">
-      <div class="row">
-        <strong>Mood:</strong>
-        <select id="mood-select">
-          <option value="dreamlike">Dreamlike</option>
-          <option value="urban">Urban</option>
-          <option value="rare">Rare</option>
-        </select>
-        <strong>Session:</strong> <span id="session-timer">0:00</span>
-      </div>
-    </div>
+    <div id="hud"></div>
     <canvas id="fx-canvas"></canvas>
     <script src="./renderer.js" type="module"></script>
   </body>
