Improve hallucination spawn loop integration

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="hud"></div>
-    <canvas id="fx-canvas"></canvas>
+    <div id="fx-canvas" aria-hidden="true"></div>
     <script src="./renderer.js" type="module"></script>
   </body>
 </html>
