Add mood-paced HUD effects with persistence

--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
             <div>
               <label for="mood-select">Mood preset</label>
               <select id="mood-select" name="mood">
-                <option value="urban">Urban Pulse</option>
-                <option value="nature">Nature Drift</option>
-                <option value="dreamcore">Dreamcore Bloom</option>
-                <option value="ambient">Ambient Float</option>
+                <option value="dreamcore">Dreamcore</option>
+                <option value="ambient">Ambient</option>
+                <option value="hype">Hype</option>
+                <option value="rare">Rare Drop</option>
               </select>
             </div>
             <div>
@@ -379,10 +379,10 @@
             <div>
               <p class="subtext">Tags</p>
               <div class="tag-buttons">
-                <button type="button" data-tag="Urban">Urban</button>
-                <button type="button" data-tag="Nature">Nature</button>
                 <button type="button" data-tag="Dreamcore">Dreamcore</button>
                 <button type="button" data-tag="Ambient">Ambient</button>
+                <button type="button" data-tag="Hype">Hype</button>
+                <button type="button" data-tag="Rare Drop">Rare Drop</button>
               </div>
             </div>
             <div id="asset-pack-container" hidden>
