Add Pixi-based hallucination HUD overlay

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="hud"></div>
     <div id="fx-canvas" aria-hidden="true"></div>
-    <script src="./renderer.js" type="module"></script>
+    <script src="./hallucination-hud.js" type="module"></script>
   </body>
 </html>
