Add auto-launch and HUD version display

--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
         <header class="hud-header">
           <div>
             <h1 class="hud-title">Run The World Overlay</h1>
+            <div id="version-text" style="opacity: 0.6; font-size: 0.8rem;"></div>
             <p class="status status--disconnected" id="status">Waiting for step stream…</p>
           </div>
           <div class="version-grid">
