--- a/renderer/index.html
+++ b/renderer/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="hud"></div>
-    <div id="fx-canvas" aria-hidden="true"></div>
+    <div id="fx-canvas"></div>
     <!-- Add to HUD for manual export button -->
     <button onclick="window.downloadSessionLog()">Download Log</button>
     <script type="module">
