Add Google Fit WebSocket bridge with OAuth2 and real-time polling (steps, BPM)

--- a/index.html
+++ b/index.html
@@ -388,6 +388,11 @@
             <p class="subtext" id="last-update">No data received yet.</p>
           </article>
           <article class="metric-card">
+            <strong>Heart rate</strong>
+            <span id="heart-rate">--</span>
+            <p class="subtext" id="heart-rate-status">Waiting for heart rate data…</p>
+          </article>
+          <article class="metric-card">
             <strong>Session Timer</strong>
             <span class="timer-display" id="session-timer">00:00:00</span>
             <p class="subtext">Tracks time since the playlist started.</p>
