Add Google Fit WebSocket bridge and heart rate HUD

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -24,6 +24,10 @@
         <span id="step-count">0</span>
         <span id="ws-status" style="margin-left: 10px; font-size: 0.8em; opacity: 0.7;">Connecting...</span>
       </div>
+      <div class="row">
+        <strong>Heart Rate:</strong>
+        <span id="heart-rate">—</span>
+      </div>
       <!-- Add to HUD for manual export button -->
       <div class="row">
         <button onclick="window.downloadSessionLog()">Download Log</button>
