--- a/renderer/index.html
+++ b/renderer/index.html
@@ -43,6 +43,7 @@
       window.downloadSessionLog = downloadLog;
     </script>
     <script src="fit-client.js"></script>
+    <script src="./youtube-runner.js"></script>
     <script src="./renderer.js" type="module"></script>
   </body>
 </html>
