--- a/index.html
+++ b/index.html
@@ -39,21 +39,30 @@
         backdrop-filter: blur(14px) saturate(140%);
       }
 
-      #fx-canvas {
-        position: absolute;
-        inset: 0;
-        width: 100%;
-        height: 100%;
+      #fx-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 0;
+        height: 0;
+        opacity: 0;
         pointer-events: none;
-        z-index: 0;
+        z-index: 1;
         mix-blend-mode: screen;
+        transform: translate3d(-9999px, -9999px, 0);
+        will-change: transform, width, height, opacity;
+        transition: opacity 160ms ease-out;
       }
 
-      #fx-canvas.fx-softPulse {
+      #fx-overlay.fx-visible {
+        opacity: 1;
+      }
+
+      #fx-overlay.fx-softPulse {
         animation: fx-softPulse 2.2s ease-out;
       }
 
-      #fx-canvas.fx-scanline {
+      #fx-overlay.fx-scanline {
         background: repeating-linear-gradient(
           to bottom,
           rgba(148, 163, 184, 0.2) 0px,
@@ -357,7 +366,7 @@
   </head>
   <body>
     <div id="app">
-      <canvas id="fx-canvas"></canvas>
+      <div id="fx-overlay" aria-hidden="true"></div>
       <main>
         <header class="hud-header">
           <div>
