--- a/renderer/index.html
+++ b/renderer/index.html
@@ -35,7 +35,7 @@
       </div>
     </div>
     
-    <div id="fx-canvas"></div>
+    <div id="fx-overlay" aria-hidden="true"></div>
 
     
     <script type="module">
