--- a/renderer/index.html
+++ b/renderer/index.html
@@ -6,7 +6,7 @@
     <title>Run the World HUD</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body data-google-client-id="">
+  <body data-google-client-id="your-google-client-id.apps.googleusercontent.com">
     <div id="hud">
       <div class="row" id="google-auth-row">
         <button id="google-sign-in" type="button">Sign in with Google</button>
@@ -59,7 +59,7 @@
       id="hud-floating-toggle"
       type="button"
       title="Show HUD"
-      style="position: fixed; bottom: 16px; left: 16px; z-index: 10001; display: none; padding: 10px 12px; border-radius: 999px; border: none; background: rgba(17, 17, 17, 0.85); color: #fff; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.35); cursor: pointer;"
+      style="position: fixed; bottom: 16px; right: 16px; z-index: 10001; display: none; padding: 8px 10px; border-radius: 999px; border: none; background: rgba(17, 17, 17, 0.9); color: #fff; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4); cursor: pointer; font-size: 16px;"
     >⚙️</button>
 
     <div id="youtube-player-container" style="margin-top: 16px;">
