--- a/renderer/index.html
+++ b/renderer/index.html
@@ -59,8 +59,10 @@
       id="hud-floating-toggle"
       type="button"
       title="Show HUD"
-      style="position: fixed; bottom: 16px; right: 16px; z-index: 10001; display: none; padding: 8px 10px; border-radius: 999px; border: none; background: rgba(17, 17, 17, 0.9); color: #fff; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4); cursor: pointer; font-size: 16px;"
-    >⚙️</button>
+      hidden
+      aria-controls="hud"
+      aria-expanded="false"
+    >HUD</button>
 
     <div id="youtube-player-container" style="margin-top: 16px;">
       <div id="youtube-player" style="width: 100%; height: 360px;"></div>
