--- a/renderer/index.html
+++ b/renderer/index.html
@@ -64,8 +64,8 @@
       aria-expanded="false"
     >HUD</button>
 
-    <div id="youtube-player-container" style="margin-top: 16px;">
-      <div id="youtube-player" style="width: 100%; height: 360px;"></div>
+    <div id="youtube-player-container">
+      <div id="youtube-player"></div>
     </div>
 
     <div id="fx-overlay" aria-hidden="true"></div>
