--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Run Overlay</title>
+    <script>
+      // Redirect to renderer HUD
+      window.location.href = '/renderer/index.html';
+    </script>
     <style>
       :root {
         color-scheme: dark;
